# jarvis-recipes-server

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  POSTGRES_SETUP.md  QUICK_DEPLOY.md  README.md  alembic.ini  apply_migrations.sh  deploy.sh  docker-compose.dev.yaml  docker-compose.ghcr.yml  docker-compose.prod.yaml  docker-compose.staging.yml  docker-compose.yml  env.staging.template  env.template  make_migration.sh  pyproject.toml  pytest.ini  run-prod.sh  run.sh
.github/: DOCKER_BUILD_TROUBLESHOOTING.md  DOCKER_WORKFLOW.md
.github/workflows/: docker-build-push-amd64-only.yml.disabled  docker-build-push.yml  test.yml
PRDs/: auth.md  create-recipes-via-image-refactor-v1.md  create-recipes-via-url.md  ingredients.md  jarvis-ocr-service.md  json-response-format-support.md  llm-proxy-auth.md  llm-proxy-refactor-changes.md  meal-planning-enhancements.md  meal-planning-v0.md  multi-turn-vision.md  prd.md  queue-flow.md  recipe-by-image.md  recipe-parse-url-client.md  recipe-queue-new-statuses.md  s3-to-minio.md  url-parsing-webview-only.md  url_scrape_refactor.md
alembic/: env.py
alembic/versions/: 042604bdaec0_initial_migration.py  4a39cf2654f0_more_robust_ingredients_uom.py  50fe459ab5d2_beginning_meal_planning.py  584ba5a42a56_adding_recipe_queue_tables.py  8c76e8670c53_add_recipe_via_url_db_changes.py  9b030b4470dc_enhanced_queue.py  a1b2c3d4e5f6_add_settings_table.py  b2c3d4e5f6g7_seed_settings.py
jarvis_recipes/app/: main.py
jarvis_recipes/app/api/: deps.py
jarvis_recipes/app/api/routes/: __init__.py  from_image.py  import.py  ingestion.py  meal_plans.py  planner.py  recipes.py  stock.py  tags.py
jarvis_recipes/app/core/: config.py  service_config.py
jarvis_recipes/app/db/: models.py  session.py
jarvis_recipes/app/schemas/: auth.py  ingestion.py  ingestion_input.py  meal_plan.py  parse_job.py  planner.py  recipe.py  stock.py  tag.py
jarvis_recipes/app/services/: image_ingest_pipeline.py  image_ingest_worker.py  ingestion_service.py  llm_client.py  mailbox_service.py  meal_plan_service.py  ocr_easyocr.py  ocr_quality.py  ocr_service_client.py  ocr_tesseract.py  parse_job_service.py  planner_service.py  quantity_parser.py  queue_service.py  queue_worker.py  recipes_service.py  s3_storage.py  settings_service.py  static_recipe_service.py  static_seed_service.py  stock_service.py  url_recipe_parser.py  vision_runner.py
jarvis_recipes/app/services/storage/: base.py  local.py
jarvis_recipes/app/services/url_parsing/: __init__.py  constants.py  html_fetcher.py  ingredient_parser.py  models.py  parsing_utils.py
jarvis_recipes/app/services/url_parsing/extractors/: __init__.py  heuristic.py  llm.py  schema_org.py
jarvis_recipes/app/storage/: __init__.py  object_store.py
jarvis_recipes/recipe_parsing_tests/image_based/all_crust_sheet_pan_lasagna/: expected.json
jarvis_recipes/recipe_parsing_tests/image_based/date_night_chicken_mushroom/: expected.json
jarvis_recipes/recipe_parsing_tests/image_based/fake_fried_chicken_special_sauce/: expected.json
jarvis_recipes/recipe_parsing_tests/image_based/one_pot_creamy_shells/: expected.json
jarvis_recipes/recipe_parsing_tests/image_based/spicy_beef_bowls/: expected.json
jarvis_recipes/recipe_parsing_tests/url_based/: expected.json  urls.json
scripts/: apply_migrations.py  issue_token.sh  make_migration.py  run_cleanup.py  run_parse_worker.py  run_rq_worker.py  test_recipe_parsing_by_url.sh
static_data/: ingredients.json  stock_recipes.json  units_of_measure.json
tests/: conftest.py  run_recipe_parsing_integration.sh  test_auth_required.py  test_html_fetcher_ssrf.py  test_image_pipeline.py  test_ingestion_refactor.py  test_meal_plan_generation.py  test_multi_turn_vision.py  test_ocr_ensemble_integration.py  test_parse_url_endpoint.py  test_preflight_validation.py  test_quantity_parser.py  test_quantity_split.py  test_recipe_parsing_integration.py  test_recipes.py  test_secret_guard.py  test_stock_endpoints.py  test_url_recipe_parser.py  test_validation_handler.py
tests/fixtures/ingestion/: html_snippet.html  jsonld_valid.json
