[project]
name = "jarvis-recipes"
version = "0.1.0"
description = "Jarvis Recipes FastAPI service"
authors = [
    {name = "alexberardi",email = "alexmberardi@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.123.9,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "Pillow (>=10.4.0,<11.0.0)",
    "pillow-heif (>=0.16.0,<0.17.0)",
    "boto3 (>=1.34.0,<2.0.0)",
    "rq (>=1.15.1,<2.0.0)",
    "redis (>=5.0.0,<6.0.0)"
]

[tool.poetry.dependencies.jarvis-settings-client]
git = "https://github.com/alexberardi/jarvis-settings-client.git"
branch = "main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.3.0,<9.0.0)",
    "pytest-asyncio (==0.23.8)"
]

[tool.poetry]
packages = [{ include = "jarvis_recipes" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as asyncio-based",
    "integration: mark test as integration test requiring external services (Redis, OCR, etc.)",
]

[tool.coverage.run]
source = ["jarvis_recipes"]
omit = [
    # Workers require Redis/RQ runtime
    "jarvis_recipes/app/services/queue_worker.py",
    "jarvis_recipes/app/services/image_ingest_worker.py",
    "jarvis_recipes/app/services/queue_service.py",
    # External service clients (LLM proxy, OCR service, S3/MinIO)
    "jarvis_recipes/app/services/llm_client.py",
    "jarvis_recipes/app/services/ocr_service_client.py",
    "jarvis_recipes/app/services/ocr_quality.py",
    "jarvis_recipes/app/services/s3_storage.py",
    "jarvis_recipes/app/storage/object_store.py",
    # Database session setup (requires live Postgres)
    "jarvis_recipes/app/db/session.py",
    # Static data seed scripts
    "jarvis_recipes/app/services/static_recipe_service.py",
    "jarvis_recipes/app/services/static_seed_service.py",
    # App entrypoint / startup
    "jarvis_recipes/app/main.py",
    # Alembic migrations
    "jarvis_recipes/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
